--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ jobs:
       run: |
         echo "done!"
 
-
   deploy_dev:
     name: Deploy to dev
     runs-on: ubuntu-latest
@@ -21,5 +20,16 @@ jobs:
       name: dev
     steps:
     - name: Deploy to dev
+      run: |
+        echo "done!"
+
+  deploy_prod:
+    name: Deploy to proid
+    runs-on: ubuntu-latest
+    needs: [build, deploy_dev]
+    environment:
+      name: prod
+    steps:
+    - name: Deploy to prod
       run: |
         echo "done!"
