--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -13,7 +13,8 @@ jobs:
         fetch-depth: 0
     - id: determine_tag
       name: Determine Tag
-      run: bash tag.sh
+      run: run |
+        tag.sh $GITHUB_SHA
     - name: Create Tag
       if: ${{ steps.determine_tag.outputs.tag_name != '' }}
       uses: rickstaa/action-create-tag@v1
