more syntax silliness.

--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -13,8 +13,7 @@ jobs:
         fetch-depth: 0
     - id: determine_tag
       name: Determine Tag
-      run: |
-        tag.sh $GITHUB_SHA
+      run: bash tag.sh ${{ github.sha }}
     - name: Create Tag
       if: ${{ steps.determine_tag.outputs.tag_name != '' }}
       uses: rickstaa/action-create-tag@v1
