--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
 
   deploy_dev:
     name: Deploy to dev
+    concurrency:
+      group: deploy-dev
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     needs: [test]
     environment:
@@ -36,6 +39,9 @@ jobs:
 
   deploy_prod:
     name: Deploy to proid
+    concurrency:
+      group: deploy-prod
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     needs: [test, deploy_dev]
     environment:
